fix: properly display dialogue box on mobile devices

--- a/style.css
+++ b/style.css
@@ -7,7 +7,6 @@ body {
   background-position: center center;
   background-size: cover;
   font-family: "Gothic2";
-  font-size: 16px;
   line-height: 2;
   margin: 0;
 }
@@ -25,7 +24,7 @@ body {
   background-color: #00000077;
   box-sizing: border-box;
   color: #e0e0e0;
-  flex: 1 0 auto;
+  flex: 1 1 auto;
   padding: 1.75rem;
   text-align: center;
 }
